--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
