--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "event-emitter": "github:gitdingus/event-emitter",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.0"
   }
 }
